--- a/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.Rmd
+++ b/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.Rmd
@@ -181,6 +181,8 @@ class: roja bottom
 
 * ...
 
+* [Tabla descriptiva de variables]
+
 ---
 class: roja bottom
 
@@ -191,7 +193,7 @@ class: roja bottom
 
 ### Conocimientos
 ### Prácticas
-### Medidas
+### Valoración
 
 <br>]
 ]
@@ -206,7 +208,7 @@ class: roja bottom
 
 ### **.yellow[Conocimientos**]
 ### Prácticas
-### Medidas
+### Valoración
 
 <br>]
 ]
@@ -236,6 +238,53 @@ class: roja bottom
 ![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/1-cca-sexo-1.png)
 
 ---
+class: roja bottom
+
+
+.pull-right[
+.right[
+# Resultados
+
+### Conocimientos
+### **.yellow[Prácticas**]
+### Valoración
+
+<br>]
+]
+
+---
+
+![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/3-prac-1.png)
+---
+
+![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/3-prac-sexo-1.png)
+
+---
+
+![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/4-bca-comp-1.png)
+
+---
+
+![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/4-bca-sexo-1.png)
+
+---
+class: roja bottom
+
+
+.pull-right[
+.right[
+# Resultados
+
+### Conocimientos
+### Prácticas
+### **.yellow[Valoración**]
+
+<br>]
+]
+
+
+
+---
 
 ![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/2-vca-1.png)
 
@@ -257,33 +306,70 @@ class: roja bottom
 ---
 
 ![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/2-vca-sexo-1.png)
----
 
-![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/3-prac-1.png)
----
-
-![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/3-prac-sexo-1.png)
-
----
-
-![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/4-bca-comp-1.png)
-
----
-
-![:scale 90%](https://raw.githubusercontent.com/lisa-coes/cais-survey/master/2_processing/descriptive-analysis_files/figure-html/4-bca-sexo-1.png)
 ---
 class: inverse
 
 ## Conclusiones
 
+####- Conocimiento variable y heterogéneo según áreas de la ciencia abierta y grupos específicos
+
+#### - Bajo nivel de prácticas, particularmente las identificadas en la comunidad (vs las própias)
+
+####- Alta valoración, principalmente generaciones más jóvenes, carrera inicial y mujeres
+
 ---
 class: middle center
 
 
-# ¡gracias por su atención!
+# ¡Gracias por su atención!
 
 Más info:
 
 [lisa-coes.com](https://lisa-coes.com/)
 
 [![:scale 20%](octocat.png)](https://github.com/lisa-coes/)
+
+---
+
+
+.pull-left-narrow[
+
+.left[
+![:scale 45%](Herramientas UValpo2024.png) ![:scale 45%](logo-lisa.png)
+
+----
+![:scale 40%](logo_facso.png) ![:scale 50%](logo-nudos.png)
+
+![:scale 45%](logo-coes-cuadrado.png)
+
+----
+class: front middle center 
+
+.small[**Congreso Chileno de Sociología**
+
+2-4 Mayo 2024]
+
+]
+]
+
+.pull-right-wide[
+
+.right[
+.content-box-gray[
+
+
+
+## **.red[Barreras para la Ciencia Abierta en la investigación en Ciencias Sociales en Chile]**
+
+]
+
+**.red[Juan Carlos Castillo, Cristóbal Ortiz, Kevin Carrasco, Moira Martínez & Valentina Frometa]** 
+.small[
+Departamento de Sociología, Universidad de Chile]
+.small[[.red[jc-castillo.com]](https://jc-castillo.com/)
+
+]
+]
+]
+
