--- a/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.Rmd
+++ b/congreso-sociologia-stgo-Mayo2024/congreso-sociologia-stgo-Mayo2024.Rmd
@@ -178,7 +178,20 @@ class: roja bottom
 
 * 70 respuestas completas
 
-* [Tabla descriptiva de variables]
+* Tabla descriptiva de variables
+
+```{r}
+load("cais_v2.RData")
+
+cais_alas <- cais_v2 %>%
+  select("Sexo/Género" = sexo, "Grupo etario" = edad, "Grado académico" = grado, "Etapa carrera" = etapa, "Enfoque principal" = enfoq)
+
+vtable::sumtable(cais_alas,
+                 digits = 2, out = "return", labels = TRUE,
+                 summ = c('notNA(x)','mean(x)','sd(x)','min(x)','max(x)'),
+                 summ.names = c('N Válidos','Porcentaje'))
+```
+
 
 ---
 class: roja bottom
